--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
 header {
     background-image: url(assets/gracosoft.jpg);
+    box-sizing: border-box;
     width: 100%;
     height: 80vh;
     background-size: cover;
+    padding: 10px;
+}
+
+.cabeza {
     display: flex;
-    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
+}
+
+section {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.imagen {
+    width: 400px;
 }
